// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataBar /> LargeValue story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="11"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="12"
      >
        96/100
      </span>
    </div>
    <div
      aria-describedby="12"
      class="data-bar"
      id="11"
      role="grid"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 96%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> NoSegments story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="15"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="16"
      >
        0/100
      </span>
    </div>
    <div
      aria-describedby="16"
      class="data-bar"
      id="15"
      role="grid"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
        role="row"
      >
        <div
          class="data-bar-segment data-bar-segment--brand"
          role="gridcell"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> SmallValue story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="13"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="14"
      >
        1/100
      </span>
    </div>
    <div
      aria-describedby="14"
      class="data-bar"
      id="13"
      role="grid"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 5%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsLessThanMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="1"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="2"
      >
        50/100
      </span>
    </div>
    <div
      aria-describedby="2"
      class="data-bar"
      id="1"
      role="grid"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 25%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 10%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 15%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="5"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="6"
      >
        50/50
      </span>
    </div>
    <div
      aria-describedby="6"
      class="data-bar"
      id="5"
      role="grid"
    >
      <div
        class="data-bar__segment-space"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 50%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 20%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 30%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsMoreThanMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="7"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="8"
      >
        50/25
      </span>
    </div>
    <div
      aria-describedby="8"
      class="data-bar"
      id="7"
      role="grid"
    >
      <div
        class="data-bar__segment-space"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 100%;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataBar /> TotalsRightUnderMax story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <div
      class="data-bar__label-wrapper"
    >
      <label
        class="data-bar__label"
        for="9"
      >
        Data bar
      </label>
      <span
        class="text text--caption"
        id="10"
      >
        50/51
      </span>
    </div>
    <div
      aria-describedby="10"
      class="data-bar"
      id="9"
      role="grid"
    >
      <div
        class="data-bar__segment-space data-bar__segment-space--incomplete"
        role="row"
      >
        <div
          aria-label="Segment 1"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 49.01960784313725%;"
          tabindex="0"
        />
        <div
          aria-label="Segment 2"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 19.607843137254903%;"
          tabindex="-1"
        />
        <div
          aria-label="Segment 3"
          class="data-bar-segment data-bar-segment--brand data-bar-segment--hoverable"
          role="gridcell"
          style="width: 29.411764705882355%;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;
